model fix, vehicle create
