# models/generation.model.js
@@ -6,7 +6,8 @@ const Generation = new Schema({
     name: { type: String, required: true },
     yearBegin: { type: Number, required: true },
     yearEnd: { type: Number, required: true },
-    series: { type: Schema.Types.ObjectId, ref: 'Series' }
+    model: { type: Schema.Types.ObjectId, ref: 'Model', required: true },
+    series: [{ type: Schema.Types.ObjectId, ref: 'Series' }]
 }, {
     timestamps: true
 });
