# models/vehicle.model.js
@@ -7,8 +7,10 @@ const Vehicle = new Schema({
     price: { type: Number },
     isServiced: { type: Boolean },
     image: { type: String, required: true },
-    model: { type: Schema.Types.ObjectId, ref: 'Model', required: true },
-    dealership: { type: Schema.Types.ObjectId, ref: 'Dealership'}
+    model: { type: Schema.Types.ObjectId, ref: 'Model' },
+    generation: { type: Schema.Types.ObjectId, ref: 'Generation', required: true },
+    series: { type: Schema.Types.ObjectId, ref: 'Series', required: true },
+    dealership: { type: Schema.Types.ObjectId, ref: 'Dealership', required: true}
 }, {
     timestamps: true
 });
